NetworkPolicy/my_environment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clarusshop-deployment
  namespace: clarusshop-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clarusshop
  template:
    metadata:
      labels:
        app: clarusshop
    spec:
      containers:
      - name: clarusshop
        image: clarusway/clarusshop
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service   
metadata:
  name: clarusshop-svc
  namespace: clarusshop-ns
spec:
  type: ClusterIP  
  ports:
  - port: 80 
    targetPort: 80
  selector:
    app: clarusshop 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service   
metadata:
  name: nginx-svc
  namespace: nginx-ns
spec:
  type: ClusterIP  
  ports:
  - port: 80 
    targetPort: 80
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: clarusdb-deployment
  namespace: clarusdb-ns 
spec:
  replicas: 1
  selector:
    matchLabels:
      db: clarusdb
  template:
    metadata:
      labels:
        db: clarusdb
    spec:
      containers:
      - name: clarusdb
        image: clarusway/clarusdb:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service   
metadata:
  name: clarusdb-svc
  namespace: clarusdb-ns
spec:
  type: ClusterIP  
  ports:
  - port: 80 
    targetPort: 80
  selector:
    db: clarusdb
