NetworkPolicy/network-policy-2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: clarusdb-ns
spec:
  podSelector:
    matchLabels:
      db: clarusdb
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 172.16.0.0/16
            except:
              - 172.16.180.0/24
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: clarusshop-ns
        - podSelector:
            matchLabels:
              role: frontend      
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: clarusshop-ns
      ports:
        - protocol: TCP
          port: 80
